initializing react app

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,128 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Source Sans Pro', sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.header {
+  position: relative;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.header h1 {
+  width: 30vw;
   color: white;
+  text-align: center;
+  font-weight: bold;
+  font-size:4vw;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
-.App-link {
-  color: #61dafb;
+.header img {
+  width: 100%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+section {
+  padding: 5rem 3rem;
+}
+
+.section_container {
+  margin: auto;
+  max-width: 50rem;
+}
+
+h2 {
+  color: #145CAB;
+  font-size: 32px;
+  font-weight: bold;
+  text-align: center;
+  padding-bottom: 0.5rem;
+}
+
+article {
+  color: #535353;
+  margin: 1rem 0 2rem;
+  line-height: 2rem;
+
+}
+
+.blue_article_text {
+  color: #2611FF;
+}
+
+.conclusion {
+  margin-top: 3rem;
+}
+
+.background_grey {
+  background-color: #F3F3F3;
+}
+
+.pond_section h2 {
+  margin-bottom: 2rem;
+}
+
+.images_container {
+  max-width: 60rem;
+  margin: 1rem auto;
+}
+
+.images {
+  display: flex;
+  justify-content: space-around;
+  gap: 2rem;
+}
+
+.images img {
+  width: 50%;
+}
+
+.article_container {
+  max-width: 50rem;
+  margin: 1rem auto 0;
+}
+
+.cottage_photo img {
+  display: block;
+  width: 60%;
+  margin: 1rem auto 2rem ;
+}
+
+#cottage_photo:hover {
+  cursor: pointer;
+}
+
+@media screen and (max-width: 800px){
+  .header img {
+      height: 10rem;
+      object-fit: cover;
+      object-position: 80% 60%;
   }
-  to {
-    transform: rotate(360deg);
+  .header h1 {
+      left: 30%;
+      width: 50vw;
+      font-size: 7vw;
   }
+}
+
+
+
+@media screen and (max-width: 480px){
+  section {
+      padding-top: 2rem;
+      padding-bottom: 2rem;
+  }
+
+  article {
+      font-size: 14px;
+      line-height: 1.5rem;
+  }
+
+  h2 {
+      font-size: 24px;
+  }
+  
 }
